--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -1,13 +1,25 @@
-div {
+.top-container {
   background-color: #E4F9F5;
 
 }
 
 body{
-  margin: 0px;
+  margin: 0;
 
 }
 
 h1{
   margin-top:0;
+}
+
+.middle-container {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+}
+
+.bottom-container {
+  width: 200px;
+  height: 200px;
+  background-color: blue;
 }
