--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -1,25 +1,45 @@
+body {
+  margin: 0;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+  ;
+}
+
+h1 {
+  margin-right: 0;
+  font-family: 'Sacramento', cursive;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .top-container {
   background-color: #E4F9F5;
-
-}
-
-body{
-  margin: 0;
-
-}
-
-h1{
-  margin-top:0;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middle-container {
-  width: 200px;
-  height: 200px;
-  background-color: red;
+
 }
 
 .bottom-container {
-  width: 200px;
-  height: 200px;
-  background-color: blue;
+
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
