--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -2,16 +2,18 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
-  ;
+
 }
 
 h1 {
+  font-size:5.625rem;
   margin-right: 0;
   font-family: 'Sacramento', cursive;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
 }
 
 h3 {
