--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -7,17 +7,21 @@ body {
 
 h1 {
   font-size:5.625rem;
-  margin-right: 0;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  color: #66BFBF;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
+  color: #66BFBF;
+
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
 }
 
 .top-container {
