--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -103,9 +103,30 @@ hr {
 }
 
 .btn {
-  background-color: #66BFBF;
-  margin: 35px auto 10px auto;
-  border-radius: 6px;
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11991bb);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11991bb);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11991bb);
+  background-image: -o-linear-gradient(top, #11cdd4, #11991bb);
+  background-image: linear-gradient(to bottom, #11cdd4, #11991bb);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #3498db);
+  background-image: -moz-linear-gradient(top, #30e3cb, #3498db);
+  background-image: -ms-linear-gradient(top, #30e3cb, #3498db);
+  background-image: -o-linear-gradient(top, #30e3cb, #3498db);
+  background-image: linear-gradient(to bottom, #30e3cb, #3498db);
+  text-decoration: none;
 }
 
 .footer-link {
@@ -120,6 +141,6 @@ hr {
 }
 
 .contact-me {
-  width: 50%;
-  margin: 100px auto 100px auto;
+  width: 40%;
+  margin: 40px auto 60px;
 }
