--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -98,8 +98,7 @@ hr {
 
 .btn-a {
   color: #EAF6F6;
-  font-size: 16px;
-  padding: 15px;
+
 }
 
 .btn {
@@ -112,7 +111,7 @@ hr {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: 'Merriweather', serif;
   color: #ffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
