--- a/CSS-MySite/css/styles.css
+++ b/CSS-MySite/css/styles.css
@@ -92,7 +92,7 @@ hr {
 .bottom-container {
   background-color: #66BFBF;
   margin-bottom: 0;
-  padding: 30px;
+  padding: 50px 0 20px ;
   margin-top: 50px;
 }
 
