--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -3,8 +3,7 @@
 }
 
 h1{
-  font-family: Montserrat;
-  color: black;
+  font-family: "Montserrat-Black";
   font-size: 3rem;
   line-height: 1.5;
 }
