--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -3,7 +3,8 @@
 }
 
 h1{
-  font-family: "Montserrat-Black";
+  font-family: "Montserrat, sans-serif";
   font-size: 3rem;
   line-height: 1.5;
+  font-weight: 900;
 }
