--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -1,14 +1,38 @@
+body{
+  font-family: "Montserrat";
+}
+
 #title{
   background-color: #ff4c68;
+
 }
 
 .container-fluid {
   padding: 3% 15%;
+  height: 75%;
 }
 
-h1{
+.description{
   font-family: "Montserrat", "sans-serif";
   font-size: 3rem;
   line-height: 1.5;
   font-weight: 900;
+  margin: 75px 0;
+  color: white;
+}
+
+.nav-item{
+  margin: 10px;
+  font-size: 1.25rem;
+}
+
+.navbar-brand{
+  font-weight: bold;
+  font-size: 2.70rem;
+}
+
+.universe{
+  height: auto;
+  width: 380px;
+  /* margin: 25px auto;  */
 }
