--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -10,7 +10,6 @@ body{
 
 .container-fluid {
   padding: 3% 15%;
-  height: 75%;
 }
 
 h1{
@@ -18,7 +17,6 @@ h1{
   font-size: 3rem;
   line-height: 1.5;
   font-weight: 900;
-  margin: 75px 0;
 
 }
 
@@ -44,10 +42,13 @@ h1{
 }
 
 /* buttons */
+.nav-button{
+  margin: 5% 3% 5% 0;
+}
 
+/* title image */
+.title-imgage{
 
-.universe{
-  height: auto;
-  width: 380px;
+  width: 70%;
 
 }
