--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -47,9 +47,9 @@ h1{
 }
 
 .title-imgage{
-  transform: rotate(25deg);
+  /* transform: rotate(25deg); */
   height: auto;
   width: 380px;
-  margin: 75px 20px 0 20px;
+  margin: 20px 0 0 -10px;
 
 }
