--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -53,3 +53,16 @@ h1{
   margin: 20px 0 0 -10px;
 
 }
+/* Added CSS */
+.features_icon{
+  font-size: 50px;
+  color: #ef8172;
+}
+
+#features{
+  font-family: "Montserrat";
+}
+
+.features_h3{
+  font-size: 1.5rem;
+}
