--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -75,7 +75,10 @@ p{
 .features_icon{
   /* font-size: 50px; */
   color: #ef8172;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
+}
+.features_icon:hover{
+  color: #ff4c68;
 }
 
 
