--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -20,6 +20,13 @@ h1{
 
 }
 
+h2{
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3{
     font-family: "Montserrat", "sans-serif";
     font-weight: bold;
@@ -85,4 +92,30 @@ p{
 
 .features_h3{
   font-size: 1.5rem;
+}
+
+/* testimonials */
+
+#testimonials{
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial_img{
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press{
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.pres-logo{
+  width: 15%;
+  margin: 20px 20px 50px;
 }
