--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -97,13 +97,12 @@ p{
 /* testimonials */
 
 #testimonials{
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
 }
 
-.testimonial_img{
+.testimonial-image{
   width: 10%;
   border-radius: 100%;
   margin: 20px;
@@ -115,7 +114,11 @@ p{
   padding-bottom: 3%;
 }
 
-.pres-logo{
+.pres-logos{
   width: 15%;
   margin: 20px 20px 50px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
 }
