--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -73,6 +73,7 @@ p{
 #features{
   padding: 7% 15%;
   font-family: "Montserrat";
+  background-color: #fff;
 }
 .feature-box{
   text-align: center;
