--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -65,16 +65,14 @@ p{
 .title-imgage{
   /* transform: rotate(25deg); */
 
-  height: auto;
+  height: 100%;
   /* width: 380px;
-  margin: 20px 0 0 -10px; */
+  /* margin: 20px 0 0 -10px; */
   position: absolute;
-  right: 5%;
-  bottom: -5%;
 
-  /* width: 20%; */
-
-  width: 50%;
+  /* left: 0; */
+  bottom: -3%;
+  width: auto;
 
 
   /* transform: rotate(25deg); */
@@ -149,15 +147,16 @@ p{
   padding: 3% 2%;
 }
 
-@media (max-width: 1028px){
+@media (max-width: 990px){
 
   #title{
     text-align: center;
   }
   .title-imgage{
     position: static;
-    width: 100%;
-    margin-bottom: -220px;
+    width: 120%;
+    height: auto;
+    margin-bottom: -55%;
   }
 
 }
