--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -3,10 +3,7 @@ body{
 }
 
 h1{
-  font-family: "Montserrat", "sans-serif";
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
+
 
 }
 
@@ -24,6 +21,15 @@ h3{
 
 p{
   color: #8f8f8f;
+}
+
+/* Headings */
+
+.big-heading{
+  font-family: "Montserrat", "sans-serif";
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
 }
 
 
