--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -9,13 +9,12 @@ h1, h2, h3, h4, h5, h6{
 
 h2{
   font-weight: bold;
-  font-size: 3rem;
-  line-height: 1.5;
+
 }
 
 h3{
-
-    font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 p{
@@ -29,6 +28,11 @@ p{
   font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
+}
+
+.section-heading{
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 
@@ -126,6 +130,11 @@ p{
   color: #fff;
 }
 
+.testimonial-text{
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 .testimonial-image{
   width: 10%;
   border-radius: 100%;
@@ -151,6 +160,10 @@ p{
 #pricing{
   padding: 100px;
   text-align: center;
+}
+.price-text{
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column{
