--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -7,15 +7,11 @@ h1, h2, h3, h4, h5, h6{
 
 }
 
-h2{
+h2, h3{
   font-weight: bold;
 
 }
 
-h3{
-  font-size: 1.5rem;
-  font-weight: bold;
-}
 
 p{
   color: #8f8f8f;
@@ -115,9 +111,7 @@ p{
   color: #ff4c68;
 }
 
-
-
-.features_h3{
+.feature-title{
   font-size: 1.5rem;
 }
 
