--- a/spanish/css/styles.css
+++ b/spanish/css/styles.css
@@ -1,10 +1,12 @@
 body{
-  font-family: "Montserrat";
+  font-family: "Times New Roman", Times, serif;
   text-align: center;
 }
 
+
+
 h1, h2, h3, h4, h5, h6{
-  font-family: "Montserrat";
+  font-family: "Times New Roman", Times, serif;
 
 }
 
@@ -15,7 +17,7 @@ h2, h3{
 
 
 p{
-  color: #8f8f8f;
+  color: #2b2828;
 }
 
 /* Headings */
@@ -65,8 +67,9 @@ p{
 }
 
 .nav-link{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-family: "Montserrat";
+  color: white;
 }
 
 /* buttons */
